@@ -6,5 +6,6 @@ tp: tc_test
 tp: tp_test
 tp: normalize_test
 tp: config_test
+tp: atf-check_test
 tp: atf_check_test
 tp: integration_test
