@@ -14,6 +14,10 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET
   from those that are implementation details.  The header files for the
   internal modules are not installed any more.
 
+* Made the atf-check tool private.  It is only required by atf-sh and being
+  public has the danger of causing confusion.  Also, making it private
+  simplifies the public API of atf.
+
 
 Changes in version 0.10
 ***********************
